# ai-native-book

./: .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  package.json  test_config.py  vercel.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
Frontend/: package-lock.json  sidebars.ts  tailwind.config.js
Frontend/docs/: tutorial.md
Frontend/docs/hardware/: jetson-setup.md  unitree-setup.md
Frontend/docs/module-1/: chapter-1.3.md  chapter-1.5.md
Frontend/docs/module-2/: chapter-2.1.md  chapter-2.3.md
Frontend/docs/module-3/: chapter-3.1.md  chapter-3.3.md  chapter-3.4.md  index.md
Frontend/docs/module-4/: chapter-4.2.md  chapter-4.3.md  chapter-4.4.md  chapter-4.5.md  index.md
Frontend/docs/projects/: index.md  project-1.md  project-4.md
Frontend/src/components/: CardComponent.tsx  Chatbot.tsx  Layout.jsx
auth/: better-auth.config.ts
auth/middleware/: auth.middleware.ts  personalization-api.ts
auth/types/: user-profile.ts
backend/.claude/: settings.local.json
backend/src/: config.py  main.py
chatbot/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
chatbot/app/: main.py
chatbot/app/models/: chatbot_query.py
chatbot/app/routes/: chat.py  health.py
chatbot/app/services/: chat_service.py
chatbot/app/utils/: database.py
my-web/: Dockerfile  docusaurus.config.ts  nginx.conf  package-lock.json  package.json  vercel.json
my-web/docs/: tutorial.md
specs/001-ai-robotics-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+86 files in other folders)
